[tool.poetry]
name = "ml-shenanigans"
version = "0.1.0"
description = "ML experimentation with CNNs and Vision Transformers on MNIST"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0"
torchvision = "^0.15"
numpy = "^1.24"
matplotlib = "^3.7"
scipy = "^1.10"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0"
ipykernel = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
